syntax="proto3";

package asset;


message Tag {
    enum Origin {
        SCRAPED = 0;
        VISION = 1;
        AI = 2;
        MANUAL = 3;
    }
    string value = 1;
    Origin origin = 2;
}

message ArchiveMetadata {
    string name = 1;
    int64 kilobytes = 2;
    repeated string files = 3;
}

message Asset {
    int32 id = 1; // Lucene Document ID
    string uuid = 2; // MongoDB UUID

    string name = 3;
    string description = 4;
    string filename = 5;
    string banner_uri = 6;

    repeated Tag tags = 7;
    ArchiveMetadata archive = 8;
}

